Fix architecture boundary tests and download engine flaky test